--- a/mycss.css
+++ b/mycss.css
@@ -6,7 +6,7 @@ width:100%;
 heading{
 color:green;
 font-size:40px;
-background-color:powderpurple;
+background-color:yellow;
 }
 heading,title,author,publisher{
 display:book;
