--- a/mycss.css
+++ b/mycss.css
@@ -1,16 +1,18 @@
-books{color:white;background-color:PaleVioletRed	;width:100%;}
-
-heading{
-color:LightSteelBlue;
-font-size:40px;
-background-color:powderblue;
+books{
+color:white;
+background-color:gray;
+width:100%;
 }
-
+heading{
+color:green;
+font-size:40px;
+background-color:powderpurple;
+}
 heading,title,author,publisher{
-display:block;
+display:book;
 }
 
 title{
 font-size:25px;
-font-weight:blod;
+font-weight:bold;
 }
