--- a/mycss.css
+++ b/mycss.css
@@ -1,7 +1,7 @@
-books{color:white;background-color:lightblue;width:100%;}
+books{color:white;background-color:black;width:100%;}
 
 heading{
-color:green;
+color:#FF8040;
 font-size:40px;
 background-color:gray;
 }
